# DetrafAvancado

./: .env  .gitignore  =13.7  README.md  pyproject.toml
configs/: .env  .env.example  detraf_layout.yaml
docs/: README.txt  tabelas.md
scripts/: build_vendor.sh  detraf
sql/: schema.sql
src/detraf/: __init__.py  cli.py  config_mgr.py  db.py  env.py  import_detraf.py  import_detraf_fw.py  log.py  main.py  match_cdr.py  normalizer.py  processing.py  schema.py  utils.py
src/detraf/configs/: detraf_settings.yaml
src/detraf_batimento.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
